fix(content): modal overflow in chromium

--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -80,6 +80,5 @@
     .modalContent{
         padding-left: 1rem;
         padding-right: 1rem;
-        width: available;
     }
 }
